--- a/public/css/loaders.css
+++ b/public/css/loaders.css
@@ -38,7 +38,6 @@
   100% { transform: perspective(100px) rotateX(0) rotateY(0); }
 }
 
-/* Spinner kotak yang berputar */
 .square-spin {
   animation: square-spin 3s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   width: 70px;
@@ -47,10 +46,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 8px; /* Opsional: sudut melengkung */
+  border-radius: 8px;
 }
 
-/* Logo di dalam kotak */
 .square-spin img {
   width: 40px;
   height: auto;
