--- a/public/css/buysee.css
+++ b/public/css/buysee.css
@@ -11,17 +11,20 @@
     margin: 0 1rem;
 }
 
-.btn-danger {
-    background-color: #d33;
+.swal2-confirm {
+    background-color: #dc2626;
     color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-
 }
 
-.btn-secondary {
-    background-color: #3085d6;
+.swal2-cancel {
+    background-color: #3b82f6;
     color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
+}
+
+.swal2-confirm:hover {
+    background-color: #b91c1c;
+}
+
+.swal2-cancel:hover {
+    background-color: #2563eb;
 }
